--- a/app/auth/templates/login.html
+++ b/app/auth/templates/login.html
@@ -8,7 +8,7 @@
             <h3 class="title has-text-centered">Vpis</h3>
             {% with messages = get_flashed_messages(category_filter=['invalid_login_details']) %}
                 {% if messages %}
-                    <div class="notification is-danger">
+                    <div class="notification is-link">
                         {{ messages[0] }}
                     </div>
                 {% endif %}
