--- a/app/clients/templates/_client_list_item.html
+++ b/app/clients/templates/_client_list_item.html
@@ -1,7 +1,15 @@
 {% macro client_list_item(client) %}
     <div class="field has-addons has-addons-centered">
+        <div class="control">
+            <a class="button is-link is-rounded is-small"
+               href="{{ url_for('appointments_bp.add_appointment', client_id=client.id) }}">
+          <span class="icon is-small">
+            <i class="fas fa-plus"></i>
+          </span>
+            </a>
+        </div>
         <div class="control is-expanded is-overlay control-name-and-tel">
-            <a class="button is-rounded is-outlined is-fullwidth is-small control-name-and-tel"
+            <a class="button is-outlined is-fullwidth is-small control-name-and-tel"
                href="{{ url_for('clients_bp.a_client', client_id=client.id) }}">
                 <span class="icon"><i class="fas fa-user"></i></span>
                 <span>{{ client.name }} {{ client.phone }}</span>
@@ -9,11 +17,11 @@
         </div>
         <div class="control tooltip">
             {% if client.now_sms %}
-                <button class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
+                <button class="button is-success is-small is-outlined" data-tooltip="SMS isti dan">
                     <span class="icon"><i class="fas fa-check"></i></span>
                 </button>
             {% else %}
-                <a class="button is-rounded is-small" style="color: red">
+                <a class="button is-link is-small is-outlined">
                     <span class="icon"><i class="fas fa-times"></i></span>
                 </a>
             {% endif %}
@@ -21,11 +29,11 @@
         </div>
         <div class="control tooltip">
             {% if client.same_day_sms %}
-                <button class="button is-rounded is-small" style="color: green" data-tooltip="SMS isti dan">
+                <button class="button is-success is-small is-outlined" data-tooltip="SMS isti dan">
                     <span class="icon"><i class="fas fa-check"></i></span>
                 </button>
             {% else %}
-                <a class="button is-rounded is-small" style="color: red">
+                <a class="button is-link is-small is-outlined">
                     <span class="icon"><i class="fas fa-times"></i></span>
                 </a>
             {% endif %}
@@ -33,18 +41,18 @@
         </div>
         <div class="control tooltip">
             {% if client.day_before_sms %}
-                <a class="button is-rounded is-small" style="color: green">
+                <a class="button is-success is-small is-outlined">
                     <span class="icon"><i class="fas fa-check"></i></span>
                 </a>
             {% else %}
-                <a class="button is-rounded is-small" style="color: red">
+                <a class="button is-link is-small is-outlined">
                     <span class="icon"><i class="fas fa-times"></i></span>
                 </a>
             {% endif %}
             <span class="tooltiptext">Ali dobi sms dan prej.</span>
         </div>
         <div class="control">
-            <a class="button is-success is-rounded is-outlined is-small"
+            <a class="button is-success  is-outlined is-small"
                href="{{ url_for('clients_bp.update_client', client_id=client.id) }}">
           <span class="icon is-small">
             <i class="fas fa-edit"></i>
@@ -52,7 +60,7 @@
             </a>
         </div>
         <div class="control">
-            <a class="button is-danger is-rounded is-small"
+            <a class="button is-link is-rounded is-small"
                href="{{ url_for('clients_bp.delete_client', client_id=client.id) }}"
                onclick="return confirm('Če zbrišeš stranko, bodo izbrisani tudi vsi njeni termini. Je to oki doki, smoki?');">
           <span class="icon is-small">
