--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -16,9 +16,79 @@
         Ginger Alerts
     </h1>
     <h2 class="subtitle has-text-centered">
-        An SMS alert site in the making.
+        Spletna aplikacija za pošiljanje sms sporočil, vsem ki so pozabljivi.
     </h2>
+
+
+
     {% if user %}
+        {% if user.send_SMS %}
+            <article class="message is-warning">
+                <div class="message-header">
+                    <p><span class="icon"><i class="fas fa-exclamation-triangle"></i></span>
+                        <span>Pozor</span>
+                        <span class="icon"><i class="fas fa-exclamation-triangle"></i></span></p>
+                </div>
+                <div class="message-body">
+                    Pošiljanje SMS-ov na (tvojo) žalost tebi (še) ni dovoljeno.
+                    Stran lahko testiraš in bo delovala normalno, s to izjemo da noben SMS ne bo nikoli poslan.
+                    <p class="help">Kar mogoče malo uniči poanto te čudovite spletne strani.</p>
+                </div>
+            </article>
+        {% endif %}
+        <div class="columns">
+            <div class="column">
+                <div class="card">
+                    <header class="card-header">
+                        <p class="card-header-title">
+                            <span class="icon"><i class="fas fa-info" aria-hidden="true"></i></span>
+                            <span>Splošne Informacije</span>
+                        </p>
+                    </header>
+                    <div class="card-content">
+                        <div class="content">
+                            <ul>
+                                <li>S spodnjim gumbom "dodaj stranko" lahko dodaš stranko.</li>
+                                <li>Ko dodaš prvo stranko lahko dodaš termin, z gumbom dodaj termin.</li>
+                                <li>Ko dodajaš lahko označiš, če stranka dobi SMS takoj ko shraniš termin, na dan
+                                    termina,
+                                    ali en dan pred terminom, okoli 8. ure zjutraj.
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <div class="column">
+                <div class="card">
+                    <header class="card-header">
+                        <p class="card-header-title">
+                            <span class="icon"><i class="fas fa-envelope" aria-hidden="true"></i></span>
+                            <span>SMS-i</span>
+                        </p>
+                    </header>
+                    <div class="card-content">
+                        <div class="content">
+                            <ul>
+                                <li>SMS-i se delijo na Standardni SMS in na unikatne SMS-e</li>
+                                <li>Standardni SMS je SMS, ki ga prejmejo vse stranke ki nimajo unikatnega SMS-a</li>
+                                <li>Unikatni SMS lahko dodeliš specifičnim strankam, vsaki posebi ali večim hkrati.</li>
+                                <li>SMS-e lahko urejaš na profilu stranke ali na svojem profilu.</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <footer class="card-footer">
+                        <a href="{{ url_for('home_bp.change_sms_template') }}" class="card-footer-item">Ali pa klikni sem</a>
+                    </footer>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
         {% if user.admin %}
             <table class="table">
                 <thead>
@@ -36,11 +106,13 @@
                         <td>{{ user.name }}</td>
                         <td>{{ user.email }}</td>
                         {% if user.send_SMS %}
-                            <td><a class="is-success is-outlined" href="{{ url_for('auth_bp.disapprove_sms', user_id = user.id) }}"><span class="icon"><i
+                            <td><a class="is-success is-outlined"
+                                   href="{{ url_for('auth_bp.disapprove_sms', user_id = user.id) }}"><span class="icon"><i
                                     class="fas fa-check"></i>
                             </span><span>DA</span></a></td>
                         {% else %}
-                            <td><a class="is-warning is-outlined" href="{{ url_for('auth_bp.approve_sms', user_id = user.id) }}"><span class="icon"><i
+                            <td><a class="is-warning is-outlined"
+                                   href="{{ url_for('auth_bp.approve_sms', user_id = user.id) }}"><span class="icon"><i
                                     class="fas fa-times"></i>
                             </span><span>NE</span></a></td>
                         {% endif %}
